fixed character cropping

--- a/public/css/replayer.css
+++ b/public/css/replayer.css
@@ -11528,6 +11528,13 @@ button.dropdown-item:disabled:hover {
   text-overflow: ellipsis;
 }
 
+/** Unset the line-height.
+This has caused cropped "under the line-parts" in characters like "q,g"
+when the cropped text was used e.g. with the "title" class */
+.has-cropped-text * {
+  line-height: unset;
+}
+
 /************************************************************** 
  * Specific spacing for all viewport widths
  * @remarks The naming scheme is taken from Bulma's visibility helpers
